--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,6 +4,7 @@
     <IsMainAuthor Condition="'$(EMAIL)' == 'michael@geekle.io'">true</IsMainAuthor>
     <SkipSignAssembly>false</SkipSignAssembly>
     <LangVersion>latest</LangVersion>
+    <PackageReleaseNotesFile>..\..\.nuget\$(MSBuildProjectName)\PackageReleaseNotes.txt</PackageReleaseNotesFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(CI)' == 'true'">
@@ -13,7 +14,7 @@
 
   <PropertyGroup Condition="'$(IsTestProject)' == 'false'">
     <TargetFrameworks>net10.0;net9.0</TargetFrameworks>
-    <Copyright>Copyright © Geekle 2021-2025. All rights reserved.</Copyright>
+    <Copyright>Copyright © Geekle 2021-2026. All rights reserved.</Copyright>
     <Authors>gimlichael</Authors>
     <Company>Geekle</Company>
     <Product>Savvy I/O</Product>
